@@ -1,3 +1,6 @@
+ * Fixed http://plone.org/collector/4429 by updating the modifySelectList.js
+   to deal with IE deficiencies.
+   [alecm]
 
  * Display files inline if they are of mimetype text/* thanks to LaurenceRowe
    for the patch.
